# aoc-2021-rs

./: Cargo.toml  rust-toolchain.toml
.aocf/: .gitignore  config
.aocf/cache/: aoc2015_01.json  aoc2021_01.json
aoc_2021/: Cargo.toml
aoc_2021/benches/: all.rs
aoc_2021/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
aoc_lib/: Cargo.toml
aoc_lib/src/: lib.rs
benches/: all.rs
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  grid.rs  lib.rs  main.rs  tools.rs
