
[package]
name = "aoc_2021"
version = "0.1.0"
edition = "2021"

[dependencies]
aocf = { version = "0.1.18", features = [
    "html_parsing", # required feature to submit
] }
itertools = "0.10.1"
clap = "3.0.0-beta.5"
anyhow = "1.0.51"
termion = "1.5.6"
log = "0.4.14"
stderrlog = "0.5.1"
bitflags = "1.3.2"
num = "0.4"
pathfinding = "3.0.5"
bitvec = "0.22.3"
bitter = "0.5.1"
text_trees = "0.1.2"
# ndarray = "0.15.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "all"
harness = false
